# petstore_testing

./: .env  README.MD  docker-compose.yaml  pyproject.toml  setup.cfg
src/: config.py  data_func.py  db_client.py
src/api_entity/User/: api_func.py  api_path.py
src/db_entity/User/: db_func.py
tests/: conftest.py
tests/api/user/: test_crud.py  test_limit_create.py  test_limit_update.py  test_negative.py
tests/db/: test_crud.py
tests/user/: test_crud_user.py  test_limit_create.py  test_limit_update.py
