[tool.poetry]
name = "petstore_testing"
version = "0.1.0"
description = "Autotests for https://petstore.swagger.io/"
authors = ["Boyarkina Darya <bo_dary@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
StrEnum = "^0.4.15"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
